--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -15,6 +15,8 @@ spec:
         env:
         - name: ALLOWED_HOSTS
           value: ".dbca.wa.gov.au"
+        - name: CSRF_TRUSTED_ORIGINS
+          value: "https://*.dbca.wa.gov.au"
         - name: EMAIL_HOST
           value: "smtp.lan.fyi"
         - name: IBM_CODE_UPDATER_URI
